--- a/snippets/sustainability_mobile.liquid
+++ b/snippets/sustainability_mobile.liquid
@@ -1,4 +1,4 @@
-<div class="d-block d-sm-block d-md-none d-lg-none sustainability-mobile">
+<div class="d-block d-sm-none d-md-none d-lg-none sustainability-mobile">
    <div class="sustainability-mobile-accordion accordion">
         {%- for block in section.blocks -%}                
                 <div class="accordion__item">
