--- a/web-flair/app/sass/_libs.sass
+++ b/web-flair/app/sass/_libs.sass
@@ -3,3 +3,7 @@
 @import "../libs/bootstrap/scss/utilities/_sizing.scss"
 @import "../libs/magnific-popup/dist/magnific-popup.css"
 @import "../libs/slick-carousel/slick/slick.scss"
+
+@import "../libs/bootstrap/scss/_forms.scss"    
+@import "../libs/bootstrap/scss/_input-group.scss"    
+    
