--- a/sections/sustainability.liquid
+++ b/sections/sustainability.liquid
@@ -9,6 +9,7 @@
 			</div>	
 
 			{%- include "sustainability_mobile" -%}	
+			{%- include "sustainability_tablet" -%}	
 			{%- include "sustainability_desktop" -%}	
 
 
