I worked on css code

--- a/web-flair/app/sass/blocks/main-nav/_main-nav.sass
+++ b/web-flair/app/sass/blocks/main-nav/_main-nav.sass
@@ -1,6 +1,7 @@
 
 .main-nav
-	padding-top: 25px
+	padding-bottom: 30px
+	padding-top: 30px
 
 .main-nav_bordered
 	border-bottom: 1px solid $gray
@@ -40,7 +41,7 @@
 	border: none
 	width: 100%
 	padding-left: 15px
-	padding-right: 40px
+	padding-right: 30px
 	padding-bottom: 10px
 	border-bottom: 1px solid $gray
 	font-size: 14px
