--- a/web-flair/app/sass/blocks/menu/_menu.sass
+++ b/web-flair/app/sass/blocks/menu/_menu.sass
@@ -1,5 +1,5 @@
 .menu
-	padding-left: 40px
+	padding-left: 60px
 	z-index: 10
 
 .menu__item
@@ -272,3 +272,7 @@
 		text-decoration: none
 		color: #fff
 		background-color: $text
+
+
+.globomenu .globomenu-target-text
+	letter-spacing: 3px
