--- a/web-flair/app/sass/blocks/top-nav/_top-nav.sass
+++ b/web-flair/app/sass/blocks/top-nav/_top-nav.sass
@@ -12,9 +12,11 @@
 	justify-content: space-between
 
 .top-nav__text
+	letter-spacing: 1px
 	text-transform: uppercase
 	font-family: $light
 	padding: 8px 0
+	word-spacing: 1px
 
 .top-nav__nav-item
 	color: #fff
