--- a/sections/collection_hero.liquid
+++ b/sections/collection_hero.liquid
@@ -2,9 +2,12 @@
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-12">
-					<div class="category-banner" style="background-image: url({{ section.settings.hero | img_url: 'master' }});">
+
+					{%- assign  collection_image = collection.url | split: "/" | last | append: ".png" -%}
+
+					<div class="category-banner" style="background-image: url({{ collection_image | img_url: 'master' }});">
 						<div class="category-banner__title">{{collection.title}}</div>
-	
+	        					  
 				    {% assign class_to_link = 'breadcrumbs__link' %}
   					{% assign class_to_breadcrumbs = 'breadcrumbs' %} 
 					  {% assign class_to_item = 'breadcrumbs__item' %}
