--- a/snippets/sustainability_desktop.liquid
+++ b/snippets/sustainability_desktop.liquid
@@ -11,9 +11,9 @@
                </div>               
             </div>
             <div class="sustainability-desktop-image"
-                 style="background-image: url({{ block.settings.image | img_url: 'master' }});">
+                 style="background-image: url({{ block.settings.image_desktop | img_url: 'master' }});">
                  
-                 <img src="{{ block.settings.image | img_url: 'master' }}" style="visibility:hidden;" />
+                 <img src="{{ block.settings.image_desktop | img_url: 'master' }}" style="visibility:hidden;" />
             </div>      
         </div>
    {%- endfor -%}
