--- a/snippets/sustainability_desktop.liquid
+++ b/snippets/sustainability_desktop.liquid
@@ -17,5 +17,17 @@
             </div>      
         </div>
    {%- endfor -%}
+
+
+   <div class="sustainability__wrapper-tabs">
+       <div class="sustainability__tabs">
+            <span class="sustainability__tab"><img src="{{ 'teaser-1.png' | asset_url }}" alt="brand" class="brands__item img-responsive"></span>
+            <span class="sustainability__tab"><img src="{{ 'teaser-2.png' | asset_url }}" alt="brand" class="brands__item img-responsive"></span>
+            <span class="sustainability__tab"><img src="{{ 'teaser-3.png' | asset_url }}" alt="brand" class="brands__item img-responsive"></span>        
+            <span class="sustainability__tab"><img src="{{ 'teaser-4.png' | asset_url }}" alt="brand" class="brands__item img-responsive"></span>
+            <span class="sustainability__tab"><img src="{{ 'teaser-5.png' | asset_url }}" alt="brand" class="brands__item img-responsive"></span>
+            <span class="sustainability__tab"><img src="{{ 'teaser-6.png' | asset_url }}" alt="brand" class="brands__item img-responsive"></span>
+		</div>      
+   </div>
    
 </div>
